cluster/prod/apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
  namespace: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: 22000
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: 22000
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: 21027
      protocol: UDP
