cluster/prod/apps/syncthing/sftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sftp
  namespace: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
    - name: sftp
      port: 22
      targetPort: 22
      protocol: TCP
