cluster/prod/apps/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - syncthing.k8s.lysakermoen.com
      secretName: syncthing-tls
  rules:
    - host: syncthing.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing
                port:
                  number: 80
